src/test/ui/reachable/expr_struct.stderr
error: unreachable expression
  --> $DIR/expr_struct.rs:14:13
   |
LL |     let x = Foo { a: 22, b: 33, ..return };
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: lint level defined here
  --> $DIR/expr_struct.rs:4:9
   |
LL | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^

error: unreachable expression
  --> $DIR/expr_struct.rs:19:33
   |
LL |     let x = Foo { a: return, b: 33, ..return };
   |                                 ^^

error: unreachable expression
  --> $DIR/expr_struct.rs:24:39
   |
LL |     let x = Foo { a: 22, b: return, ..return };
   |                                       ^^^^^^

error: unreachable expression
  --> $DIR/expr_struct.rs:29:13
   |
LL |     let x = Foo { a: 22, b: return };
   |             ^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 4 previous errors

